// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders 1`] = `
<div>
  <h1
    className="sc-bdVaJa dJdHpx"
  >
    Hi Styles
  </h1>
  <p>
    Do you like numbers? Great!
     
    <a
      href="#"
      onClick={[Function]}
    >
      Add more
    </a>
  </p>
  <ul
    className="sc-bwzfXH fGIOEA"
  >
    <li
      className="sc-htpNat cgsvxu"
    >
      0
    </li>
  </ul>
</div>
`;

exports[`App responds to clicks 1`] = `
<div>
  <styled.h1>
    Hi Styles
  </styled.h1>
  <p>
    Do you like numbers? Great!
     
    <a
      href="#"
      onClick={[Function]}
    >
      Add more
    </a>
  </p>
  <styled.ul>
    <styled.li>
      0
    </styled.li>
  </styled.ul>
</div>
`;

exports[`App responds to clicks 2`] = `
<div>
  <styled.h1>
    Hi Styles
  </styled.h1>
  <p>
    Do you like numbers? Great!
     
    <a
      href="#"
      onClick={[Function]}
    >
      Add more
    </a>
  </p>
  <styled.ul>
    <styled.li>
      0
    </styled.li>
    <styled.li>
      1
    </styled.li>
  </styled.ul>
</div>
`;
